# Fun

./: .gitignore  .gitmodules  Fun.sln  README.md
C/buildYourOwnLisp/: parsing.c
CookieClicker/: README.md  main.py  powerups.json  powerups.py
Data Science MOOC/Week-4-Pandas/: Introduction to Pandas.ipynb
Data Science MOOC/numpy_satellite/: 03_Numpy_Notebook.ipynb
Data Science MOOC/word_cloud/: word_cloud.py
HackerrankStacksQueues/: Program.cs
Image Processing/: README.md  image_process.py  run_test.py  sharpen.py
MCTS/: Node.cs
ML/: .gitignore  gradient_descent.py  neural_net.py  notes.html  notes.md
ML/RL/SuperAutoPetsRL/: README.md  __init__.py  data.py  effect.py  food.py  game.py  pet.py  player.py  shop.py  triggers.py
ML/kaggle_hackathon/: CatboostOptuna.csv  data.csv  hackathon.ipynb  test.csv
ML/kaggle_spaceship_titanic/: majority_voting.csv  majority_voting.py  notebook.ipynb  test_pred.csv  test_pred_catboost.csv  test_pred_catboost_250.csv  test_pred_catboost_bis.csv  test_pred_catboost_bis_0922.csv  test_pred_catboost_optuna_550iter.csv  test_pred_lgb_optuna.csv  test_pred_lgb_optuna_500.csv  test_pred_lgb_optuna_500_new.csv  test_pred_lgbm.csv
ML/kaggle_spaceship_titanic/.ipynb_checkpoints/: notebook-checkpoint.ipynb  test_pred_catboost_optuna_8iter-checkpoint.csv
ML/kaggle_spaceship_titanic/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ML/kaggle_spaceship_titanic/venv-kaggle/: optuna_catboost.py  (+2 more)
N Puzzle Python/: N Puzzle Python.pyproj
N-puzzle/: Board.cs  Program.cs
Problems/AdventOfCode2021/: day01.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day2.py  day3.py
Problems/Exercism/: Program.cs
Problems/Fun/: Fun.sln
Problems/HackerrankStacksQueues/: Program.cs
Problems/Haskell/: README.md
Problems/MCTS/: Board.cs  MCTS.cs  Node.cs  Position.cs  Program.cs  State.cs  Tree.cs  UCT.cs
Problems/N Puzzle Python/: N_Puzzle_Python.py
Problems/ReversePolishNotation/: Program.cs
React/: README.md
React/Wordle/: package.json
SpotifyAPI/: .cache  README.md  genres.json  get_genres.ipynb
TextEditorFromScratch/: TextEditorFromScratch.sln
TextEditorFromScratch/ConsoleEditor/: ConsoleEditor.csproj  Program.cs  TextEditor.cs
TextEditorFromScratch/TextEditorTests/: EditorMovementTests.cs  TextEditorTests.csproj
TextEditorFromScratch/Utils/: CharacterExtensions.cs
UNO Compétitif/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  BitpackersASMDEF.csproj  EmoCompressUtilsASMDEF.csproj  HalfFloatASMDEF.csproj  PhotonChat.csproj  PhotonRealtime.csproj  PhotonUnityNetworking.Demos.csproj  PhotonUnityNetworking.Editor.csproj  PhotonUnityNetworking.Utilities.Culling.Editor.csproj  PhotonUnityNetworking.Utilities.PhotonPlayer.Editor.csproj  PhotonUnityNetworking.Utilities.csproj  PhotonUnityNetworking.csproj  PunDemos.DemoHubEditor.csproj  PunDemos.DemoSlotcarEditor.csproj  UNO Compétitif.sln
UNO Compétitif/ProjectSettings/: ProjectSettings.asset
UnoCompetitif/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  BitpackersASMDEF.csproj  EmoCompressUtilsASMDEF.csproj  HalfFloatASMDEF.csproj  PhotonChat.csproj  PhotonRealtime.csproj  PhotonUnityNetworking.Demos.csproj  PhotonUnityNetworking.Editor.csproj  PhotonUnityNetworking.Utilities.Culling.Editor.csproj  PhotonUnityNetworking.Utilities.PhotonPlayer.Editor.csproj  PhotonUnityNetworking.Utilities.csproj  PhotonUnityNetworking.csproj  PunDemos.DemoHubEditor.csproj  PunDemos.DemoSlotcarEditor.csproj  UnoCompetitif.sln
UnoCompetitif/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cine2nerdle-engine/: .gitignore  build_movie_db.ipynb  neo4j_utils.py  requirements.txt  ruff.toml  setup.py  test.py
cine2nerdle-engine/cine2nerdle/: pyvenv.cfg
cine2nerdle-engine/game/: movie.py  person.py  play_game.py
cine2nerdle-engine/neo4j_utils/: neo4j_utils.py
cine2nerdle-engine/tests/: test_db.py  test_game.py
ctf/htb/: aehoard.ovpn
ctf/thm/: aehoard.ovpn
kdrama-video-downloader/: download.py
kdrama-video-downloader/ublock/: manifest.json
spotidal/: .gitignore  PLAN.md  README.md  package-lock.json  pyproject.toml
spotidal/src/: models.py  spotify.py  tidal.py
tiktok-recipes/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  project_description.md  pyproject.toml
tiktok-recipes/backend/: .dockerignore  Dockerfile  audio_extractor.py  auth.py  celery_app.py  main.py  models.py  nlp_processor.py  paprika_exporter.py  pyproject.toml  recipe.py  tiktok_description.py  transcriber.py
tiktok-recipes/backend/alembic/: env.py
tiktok-recipes/backend/alembic/versions/: 68bfb4d88de0_add_cover_image_paths_to_recipe.py  907de54da71f_add_cover_image_paths_to_recipe.py  aea05df33037_add_cover_images_to_recipe.py
tiktok-recipes/backend/celery_scripts/: Dockerfile  celery_worker.py  tasks.py
tiktok-recipes/data/: 71fb0d9d-34fb-43f3-a82e-2619afd773cb.json
tiktok-recipes/frontend/: Dockerfile  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
tiktok-recipes/frontend/src/: App.css  App.tsx  AuthForm.tsx  MyRecipesPage.tsx  RecipeForm.tsx  Sidebar.tsx  TiktokUrlForm.tsx  useRecipes.ts
tiktok-recipes/nlp_processing/: .dockerignore  Dockerfile  audio_extractor.py  download_models.py  models.py  nlp_processor.py  paprika_schema.json  pyproject.toml  tiktok_description.py  transcriber.py
tiktok-recipes/nlp_processing/worker/: celery_worker.py  tasks.py
tiktok-recipes/src/: audio_extractor.py  json.json  main.py  nlp_processor.py  paprika_api.py  paprika_exporter.py  paprika_schema.json  tiktok_description.py  transcriber.py
tiktok-recipes/src/static/css/: style.css
tiktok-recipes/src/static/js/: main.js
tiktok-recipes/src/templates/: index.html
velib-scraper/: .gitignore  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_velib_scraper.ps1  viz.py
velib-scraper/data/: gambetta_père_lachaise.parquet  mairie_du_20ème.parquet  pyrénées_ménilmontant.parquet  villiers_de_lisle_adam_pyrénées.parquet
(+307 files in other folders)
