[project]
name = "tiktok-recipes"
version = "0.1.0"
description = "TikTok audio extractor and recipe processing tools."
readme = "README.md"
authors = [
    { name = "Maxime Louward", email = "mlouward@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "yt-dlp",
    "TikTokApi",
    "openai-whisper",
    "torch",
    "torchvision",
    "jinja2",
    "rich",
    "pysoundfile",
    "unidecode",
    "opencv-python",
    "python-jose",
    "passlib",
    "alembic>=1.16.2",
    "accelerate>=1.8.1",
    "celery[redis]>=5.5.3",
    "redis>=5.2.1",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "fastapi[standard]>=0.115.14",
    "transformers[torch]>=4.53.1",
    "bcrypt>=4.3.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "isort",
    "ty",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
