[project]
name = "tiktok-recipes-nlp"
version = "0.1.0"
description = "TikTok audio extractor and recipe processing tools."
readme = "README.md"
authors = [
    { name = "Maxime Louward", email = "mlouward@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "yt-dlp",
    "TikTokApi",
    "openai-whisper",
    "torch",
    "torchvision",
    "dotenv",
    "rich",
    "opencv-python",
    "pysoundfile",
    "accelerate==1.3.0",
    "celery[redis]>=5.5.3",
    "gevent>=25.5.1",
    "redis>=5.2.1",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "transformers[torch]==4.49.0",
    "flash_attn==2.7.4.post1",
    "bitsandbytes>=0.46.1",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "isort",
    "ty",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
